<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/back"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <!--<Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/back"
                android:text="@string/edit"
                android:textColor="@color/black"
                android:textSize="20sp" />-->
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_top"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/back"
                android:gravity="bottom"
                android:paddingLeft="16dp"
                android:text="@string/youraccount"
                android:textColor="@color/text"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TableLayout
                android:id="@+id/mypost"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:onClick="myPostProcess"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_icon"
                        android:layout_gravity="center"
                        android:layout_span="5"
                        android:src="@drawable/everypost_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_span="15"
                        android:gravity="center_vertical"
                        android:text="@string/mypost"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_span="1"
                        android:src="@drawable/forward_icon" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/back"
                android:gravity="bottom"
                android:paddingLeft="16dp"
                android:text="@string/channels"
                android:textColor="@color/text"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <ListView
                android:id="@+id/lv_channels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

            </ListView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
